--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=7070
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.grid-fs-database=fs
+spring.data.mongodb.username=admin
+spring.data.mongodb.database=admin
